alignment fix

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ h2 {
 .project-item-header-text {
   font-weight: 400;
   font-size: calc(2rem + 1vw);
-  text-align: center;
+  text-align: left;
 }
 .project-item-header-overlay-skills {
   display: flex;
